# server-iot-project

./: .gitignore  ARQUITETURA.md  README.md  docker-compose.yml  first-overview.md  next.config.ts  package.json  script-esp32.cpp  start.sh  stop.sh
app/: globals.css  layout.tsx  page.tsx
app/api/bell/: route.ts
app/api/readings/: route.ts
app/api/sensor/: route.ts
components/: heatmap-radar.tsx  prediction-radar.tsx  radar-animation.tsx  readings-table.tsx  sms-panel.tsx  stats-cards.tsx
dashboard/: Dockerfile  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: heatmap-canvas.tsx  radar-canvas.tsx  readings-table.tsx  search-controls.tsx  sms-log-table.tsx  stats-cards.tsx
dashboard/lib/: auth.ts  db.ts  env.ts
database/: init.sql
lib/: auth.ts  prisma.ts  sms.ts
nginx/: nginx.conf
presentations/: index.html  package-lock.json  package.json
presentations/src/: App.tsx  ThemeContext.tsx  index.css
presentations/src/slides/: SlideAPI.tsx  SlideArchitecture.tsx  SlideBell.tsx  SlideDashboard.tsx  SlideDataFlow.tsx  SlideDatabase.tsx  SlideDocker.tsx  SlideEnd.tsx  SlideMQTT.tsx  SlideOverview.tsx  (+6 more)
prisma/: schema.prisma
sensor/: .dockerignore  Dockerfile  Dockerfile.simulator  Dockerfile.worker  pyproject.toml
sensor/src/sensor/: app.py  main_rpi.py  mqtt_worker.py
sensor/src/sensor/adapters/: hcsr04.py  http_publisher.py  mqtt_publisher.py  simulated.py
sensor/src/sensor/domain/: ports.py
sensor/src/sensor/web/: server.py
sensor/src/sensor/web/static/: index.html  simulator.js  style.css
(+18 files in other folders)
